<resources>
    <string name="app_name">Forum</string>
    <string name="name">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="title_placeholder">Cím</string>
    <string name="userName_placeholder">userName</string>
    <string name="description_placeholder">Kérdés</string>
    <string name="email">Email</string>
    <string name="login_as_guest">Bejelentkezés vendégként</string>
    <string name="login_with_google">Bejelentkezés google fiókkal</string>
    <string name="welcome">Üdvözöljük</string>

<!--    <string-array name="userNames">-->
<!--        <item>Tikitaki001</item>-->
<!--        <item>SzázasSzög42</item>-->
<!--        <item>Vécékefe007</item>-->
<!--        <item>HarMonika26</item>-->
<!--        <item>Szikszalag45</item>-->
<!--        <item>TúróTorta01</item>-->
<!--        <item>hdmikÁBEL11</item>-->
<!--    </string-array>-->

    <!--    <string-array name="titles">-->
    <!--        <item>Miérét fáj a lábam?</item>-->
    <!--        <item>Hol a távirányító?</item>-->
    <!--        <item>Mire lettek figyelmesek?</item>-->
    <!--        <item>Miért van sötét, ha becsukom a szemem?</item>-->
    <!--        <item>Elnézést maga Ön?</item>-->
    <!--        <item>Hányszor volt Budán kutyavásár?</item>-->
    <!--        <item>Hogy lettek Ádámnak és Évának unokái?</item>-->
    <!--    </string-array>-->

    <!--    <string-array name="descriptions">-->
    <!--        <item>Fáj a lábam. Miért fáj a lábam ennyire? Talán rosszul járok? Vagy így jártam?</item>-->
    <!--        <item>Hol a távirányító Magdi mi? Hol van? Mi van Magdi miért nem mondod meg?</item>-->
    <!--        <item>Mire lettek figyelmesek? Kihez tudtak segítségül fordulni?</item>-->
    <!--        <item>Ha becsukom a szemem, hirtelen minden olyan sötét lesz. Miért lehet ez? Előre is köszönöm a válaszokat. (21/L)</item>-->
    <!--        <item>Komolyan kérdezem, maga ön? Vagy csak viccel?</item>-->
    <!--        <item>De kajak, hányszor? Kétszer? Háromszor? Egyszer se??</item>-->
    <!--        <item>Mármint ha ketten voltak emberek, addig oké, hogy lettek gyerekeik. De nekik hogy lettek gyerekeik? Az apák a lányukal, az anyák a fiúkkal??</item>-->
    <!--    </string-array>-->

    <!--    <array name="userImages">-->
    <!--        <item>@drawable/picture2</item>-->
    <!--        <item>@drawable/picture6</item>-->
    <!--        <item>@drawable/picture5</item>-->
    <!--        <item>@drawable/picture2</item>-->
    <!--        <item>@drawable/picture7</item>-->
    <!--        <item>@drawable/picture3</item>-->
    <!--        <item>@drawable/picture4</item>-->
    <!--    </array>-->
</resources>