<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    tools:context=".Activities.ForumActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:padding="5dp" />

        <TextView
            android:id="@+id/userName"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userImage"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-70dp"
            android:layout_toEndOf="@id/userImage"
            android:padding="8dp"
            android:text="@string/userName_placeholder"
            android:textColor="?android:textColorSecondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userImage"
            android:padding="8dp"
            android:text="@string/title_placeholder"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/description"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:padding="8dp"
            android:text="@string/description_placeholder"
            android:textSize="15sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>