<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.QuestionActivity">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/userName"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userImage"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-70dp"
            android:layout_toEndOf="@id/userImage"
            android:padding="8dp"
            android:text="@string/userName_placeholder"
            android:textColor="?android:textColorSecondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userImage"
            android:padding="8dp"
            android:text="@string/title_placeholder"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/description"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:padding="8dp"
            android:text="@string/description_placeholder"
            android:textSize="15sp" />


        <ListView
            android:id="@+id/answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginTop="30sp"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/answers"
            android:hint="Válasz megadása"
            android:layout_marginTop="30sp"
            android:padding="8dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/doAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer"
            android:layout_centerHorizontal="true"
            android:text="Válaszol"
            android:onClick="answer"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/doAnswer"
            android:layout_centerHorizontal="true"
            android:text="Törlés"
            android:onClick="delete"/>

</RelativeLayout>